Ingress/dashbord-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashbord-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashbord.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
